--- a/data/ar/homepage.yaml
+++ b/data/ar/homepage.yaml
@@ -2,7 +2,7 @@
 banner:
   enable: true
   title: "إعادة تعريف صفقات ايجار المعدات الثقيلة"
-  content: "مستقبل الاعمال الانشائية الناجحة يبدا هنا"
+  content: "مستقبل اعمالك الانشائية الناجحة يبدا هنا"
   image: "images/hero-image.png"
   button:
     enable: true
@@ -18,22 +18,22 @@ features:
   # feature at the left of the image
   left_side:
     # feature item loop
-    - title: "جودة"
+    - title: "تطبيق متكامل"
       
-      content: "أصول الصفقات الناجحة"
+      content: "جميع احتياحاتك لايجار او استئجار المعدات الثقيلة موجودة داخل التطبيق"
 
 
       # feature item loop
-    - title: "سرعة"
+    - title: "وصول سهل للاطراف"
       
-      content: "سرعة الوصول الى الجهة المستهدفة "
+      content: ".قاعدة بيانات المستخدمين الموجودة لدينا ستسهل عليك الوصول للاطراف المستهدفة لاحتياجاتك"
 
   # feature at the right of the image
   right_side:
     # feature item loop
-    - title: "خبرة"
+    - title: "وضوح"
       
-      content: "مصادر موثوقة بإعتماد من خبراء التقييم"
+      content: "توضيح للطرف الآخر كامل شروطك، وربطك بمن يلائم شروطك."
 
       # feature item loop
     - title: "فرص واسعة"
@@ -45,11 +45,11 @@ features:
 promo:
   enable: true
   image: "images/rree4.png"
-  title: "معدتي يسهل عملية ايجار المعدات الثقيلة."
+  title: "معدتي هو تطبيق يسهل عملية ايجار المعدات الثقيلة."
   content:
     "
     <br>
-    سواء كنت صاحب معدات ثقيلة ام مقاول محتاج لمعدات، معدتي يسهل على جميع الاطراف المشاركة."
+     سواء كنت صاحب معدات ثقيلة ام مقاول محتاج لمعدات ثقيلة، معدتي يسهل على جميع الاطراف المشاركة في عملية الوصول، والتفاوض مع الطرف الآخر."
 
 ############################# About Product #######################
 about_product:
