--- a/data/ar/homepage.yaml
+++ b/data/ar/homepage.yaml
@@ -20,7 +20,7 @@ features:
     # feature item loop
     - title: "تطبيق متكامل"
       
-      content: "جميع احتياحاتك لايجار او استئجار المعدات الثقيلة موجودة داخل التطبيق"
+      content: "جميع احتيااتك لايجار او استئجار المعدات الثقيلة موجودة داخل التطبيق"
 
 
       # feature item loop
@@ -38,7 +38,7 @@ features:
       # feature item loop
     - title: "فرص واسعة"
       
-      content: "فرص واضحة وجاذبة في جميع مناطق المملكة العربية السعودية"
+      content: "فرص واسعة وجاذبة في جميع مناطق المملكة العربية السعودية"
 
 
 ############################# promo ############################
