--- a/data/ar/homepage.yaml
+++ b/data/ar/homepage.yaml
@@ -2,7 +2,7 @@
 banner:
   enable: true
   title: "إعادة تعريف صفقات ايجار المعدات الثقيلة"
-  content: "مستقبل اعمالك الانشائية الناجحة يبدا هنا"
+  content: "مستقبل اعمالك الانشائية الناجحة يبدأ هنا"
   image: "images/hero-image.png"
   button:
     enable: true
@@ -20,25 +20,25 @@ features:
     # feature item loop
     - title: "تطبيق متكامل"
       
-      content: "جميع احتيااتك لايجار او استئجار المعدات الثقيلة موجودة داخل التطبيق"
+      content: "جميع احتياجاتك لايجار او استئجار المعدات الثقيلة موجودة داخل التطبيق"
 
 
       # feature item loop
     - title: "وصول سهل للاطراف"
       
-      content: ".قاعدة بيانات المستخدمين الموجودة لدينا ستسهل عليك الوصول للاطراف المستهدفة لاحتياجاتك"
+      content: ".قاعدة بيانات المستخدمين الموجودة لدينا راح تسهل عليك الوصول للاطراف المستهدفة لاحتياجاتك"
 
   # feature at the right of the image
   right_side:
     # feature item loop
     - title: "وضوح"
       
-      content: "توضيح للطرف الآخر كامل شروطك، وربطك بمن يلائم شروطك."
+      content: "مُعدتي يساعدك و يوفر لك توضيح لكامل شروطك للطرف الآخر، وربطك بمن يلائم شروطك."
 
       # feature item loop
     - title: "فرص واسعة"
       
-      content: "فرص واسعة وجاذبة في جميع مناطق المملكة العربية السعودية"
+      content: "فرص جديدة واسعة وجاذبة في جميع مناطق المملكة العربية السعودية"
 
 
 ############################# promo ############################
@@ -49,7 +49,7 @@ promo:
   content:
     "
     <br>
-     سواء كنت صاحب معدات ثقيلة ام مقاول محتاج لمعدات ثقيلة، معدتي يسهل على جميع الاطراف المشاركة في عملية الوصول، والتفاوض مع الطرف الآخر."
+     سواء كنت صاحب معدات ثقيلة ترغب بتأجيرها أو مقاول ترغب باستئجار معدات ثقيلة، معدتي يسهل عليك عملية الوصول بسهولة الى الطرف الآخر بناء على حاجتك، والتفاوض بسلاسة مع الطرف الآخر."
 
 ############################# About Product #######################
 about_product:
