--- a/themes/vex-hugo/theme.toml
+++ b/themes/vex-hugo/theme.toml
@@ -15,5 +15,5 @@ min_version = "0.62.2"
   homepage = "https://themefisher.com/"
 
 [original]
-  name = "Optimized Care"
+  name = "Moedti"
   homepage = "https://themefisher.com/products/vex-bootstrap4-product-landing-page-website-template/"
